--- a/FaPA/GUI/Design/Templates/DatiGenerali.xaml
+++ b/FaPA/GUI/Design/Templates/DatiGenerali.xaml
@@ -1,9 +1,9 @@
 ﻿<UserControl x:Class="FaPA.GUI.Design.Templates.DatiGenerali"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:utils="clr-namespace:FaPA.GUI.Utils"
-             xmlns:enums="clr-namespace:FaPA.Core.FaPa"
-             xmlns:myRecordNavigator="clr-namespace:FaPA.GUI.Controls.MyRecordNavigator">
+             xmlns:t="clr-namespace:FaPA.GUI.Design.Templates"
+             xmlns:myRecordNavigator="clr-namespace:FaPA.GUI.Controls.MyRecordNavigator"
+             xmlns:utils="clr-namespace:FaPA.GUI.Utils">
     
     <Grid Margin="2,2,2,2">
         <Grid.RowDefinitions>
@@ -18,12 +18,20 @@
 
                 <TabItem Header="Fattura principale" Style="{StaticResource SubTabItemStyle}">
                     <Grid Margin="2,2,2,2" >
-                     
-                        <Grid.Effect>
+                         <Grid.Effect>
                             <DropShadowEffect Color="LightSteelBlue" Direction="280"/>
-                        </Grid.Effect>                        
+                        </Grid.Effect>       
                         
-                        <Grid.RowDefinitions>
+                        <t:InstanceNullManager Grid.Row="0" Grid.ColumnSpan="2"
+                                               BindedInstance="{Binding CurrentPoco.FatturaPrincipale}"
+                                               EmptyMessage="Nessuna scheda fattura principale aggiunta"
+                                               ActionCommandMessage="Aggiungi una scheda fattura principale aggiunta"
+                                               OnNullCommand="{Binding AddSchedaCommand}" 
+                                               ActionCommandParam="FatturaPrincipale"/>
+
+                        <Grid Visibility="{Binding CurrentPoco.FatturaPrincipale, Converter={StaticResource NullToVisibiltyConverter}}">
+
+                            <Grid.RowDefinitions>
                             <RowDefinition Height="45" />
                         </Grid.RowDefinitions>
 
@@ -43,7 +51,8 @@
                         </StackPanel>
                         
 
-                    </Grid>                   
+                    </Grid>
+                    </Grid>
                 </TabItem>
 
                 <TabItem Header="Dati trasporto" Style="{StaticResource SubTabItemStyle}">
@@ -337,26 +346,141 @@
                 </TabItem>
 
                 <TabItem Header="Dati SAL" Style="{StaticResource SubTabItemStyle}">
-                    <Grid Margin="2,2,2,2">
-                        <Grid.Effect>
-                            <DropShadowEffect Color="LightSteelBlue" Direction="270"/>
-                        </Grid.Effect>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="45" />
-                            <RowDefinition Height="45" />
-                        </Grid.RowDefinitions>
+                    
+                    <Grid>
+                        <t:InstanceNullManager Grid.Row="0" Grid.ColumnSpan="2"
+                                               BindedInstance="{Binding CurrentPoco.DatiSAL}"
+                                               EmptyMessage="Nessuna scheda dati SAL aggiunta"
+                                               ActionCommandMessage="Aggiungi una scheda dati SAL"
+                                               OnNullCommand="{Binding AddSchedaCommand}" 
+                                               ActionCommandParam="DatiSAL"/>
 
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
+                        <Grid >
 
-                        <StackPanel Grid.Row="0" Grid.Column="1" Margin="2,0,2,0">
-                            <TextBlock Text="Riferimento fase" />
-                            <TextBox   Text="{Binding CurrentPoco.DatiTrasporto.DatiSAL.RiferimentoFase, UpdateSourceTrigger=LostFocus }" 
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+
+                            <DockPanel Grid.Row="0" 
+                                       Visibility="{Binding Path=IsEmpty, Converter={StaticResource BoolToVisibilityConverter},Mode=OneWay}">
+
+                                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,15,0,0"> 
+                                        <Hyperlink FontSize="14" Command="{Binding AddItemCommand}">
+                                            <Run Text="Inserisci un nuovo elemento" />
+                                        </Hyperlink>
+                                </TextBlock>
+
+                            </DockPanel>
+
+                            <DockPanel Grid.Row="1">
+                                <DataGrid x:Name="DatiSALGridControl" ItemsSource="{Binding UserCollectionView, NotifyOnSourceUpdated=True}"
+                                          Visibility="{Binding IsEmpty, Converter={StaticResource BoolToOppositeVisibilityConverter},Mode=OneWay}"
+                                          IsSynchronizedWithCurrentItem="True" 
+                                          HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" 
+                                          SelectionMode="Extended"
+                                          CanUserAddRows="False" CanUserDeleteRows="False" CanUserResizeRows="False" 
+                                          CanUserSortColumns="True" AutoGenerateColumns="False"
+                                          RowHeaderWidth="17" RowHeight="26" HorizontalAlignment="Left" 
+                                          FontSize="16"
+                                          ScrollViewer.CanContentScroll="True"
+                                          EnableRowVirtualization="True" EnableColumnVirtualization="False"
+                                          VirtualizingStackPanel.IsVirtualizing="True"
+                                          VirtualizingStackPanel.VirtualizationMode="Standard">
+
+                                    <DataGrid.Resources>
+                                        <Style x:Key="errorStyle" TargetType="{x:Type TextBlock}">
+                                            <Style.Triggers>
+                                                <Trigger Property="Validation.HasError" Value="True">
+                                                    <!--<Setter Property="Background" Value="Red"/>-->
+                                                    <Setter Property="ToolTip" Value="{Binding RelativeSource={RelativeSource Self}, 
+                                                           Path=(Validation.Errors)[0].ErrorContent}"/>
+                                                </Trigger>
+                                            </Style.Triggers>
+                                        </Style>
+
+                                    </DataGrid.Resources>
+
+                                    <!--<DataGrid.RowValidationRules>
+
+                                        <DataErrorValidationRule  ValidationStep="CommittedValue"  ValidatesOnTargetUpdated="True" />
+
+                                    </DataGrid.RowValidationRules>-->
+
+                                    <DataGrid.Columns >
+
+                                        <DataGridTextColumn Header="Riferimento fase" Width="Auto" 
+                                                            Binding="{Binding RiferimentoFase, ValidatesOnDataErrors =True,
+                                                                                        NotifyOnSourceUpdated=True,
+                                                                                        NotifyOnValidationError=True,
+                                                                                        UpdateSourceTrigger =LostFocus}"
+                                                            ElementStyle="{StaticResource errorStyle}">
+
+                                        </DataGridTextColumn>
+
+                                    </DataGrid.Columns>
+
+                                    <DataGrid.GroupStyle>
+                                        <GroupStyle ContainerStyle="{StaticResource GroupHeaderStyle}" >
+                                            <GroupStyle.Panel>
+                                                <ItemsPanelTemplate>
+                                                    <DataGridRowsPresenter/>
+                                                </ItemsPanelTemplate>
+                                            </GroupStyle.Panel>
+                                        </GroupStyle>
+                                    </DataGrid.GroupStyle>
+
+                                </DataGrid>
+
+                            </DockPanel>
+
+                            <DockPanel Width="Auto" Grid.Row="2" Height="25" 
+                                       Visibility="{Binding IsEmpty, Converter={StaticResource BoolToOppositeVisibilityConverter},Mode=OneWay}"
+                                       Margin="0 05 0 0" 
+                                       Background="{StaticResource Brush_ToolBar}">
+
+                                                    <myRecordNavigator:MyRecordNavigator ItemsSource="{Binding Path=UserCollectionView}"
+                                                                     GridSource="{Binding ElementName=ScontoMaggiorazioneGridControl}"
+                                                                     Height="25"/>
+
+                                <Button Command="{Binding AddItemCommand}" ToolTip="Aggiunge nuovo record" >
+
+                                    <Image Source="/GUI/Design/Styles/Images/Add_24.png" Width="Auto"/>
+                                </Button>
+
+                                <Button Command="{Binding DeleteEntityCommand}"   ToolTip="Elimina record" >
+
+                                    <Image Source="/GUI/Design/Styles/Images/delete(1).png" Width="25"/>
+                                </Button>
+
+                            </DockPanel>
+
+                        </Grid>
+
+                        <!--<Grid Margin="2,2,2,2">
+                            
+                            <Grid.Effect>
+                                <DropShadowEffect Color="LightSteelBlue" Direction="270"/>
+                            </Grid.Effect>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="45" />
+                                <RowDefinition Height="45" />
+                            </Grid.RowDefinitions>
+
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+
+                            <StackPanel Grid.Row="0" Grid.Column="1" Margin="2,0,2,0">
+                                <TextBlock Text="Riferimento fase" />
+                                <TextBox   Text="{Binding CurrentPoco.DatiTrasporto.DatiSAL.RiferimentoFase, UpdateSourceTrigger=LostFocus }" 
                                        MaxLength="3"/>
-                        </StackPanel>
+                            </StackPanel>
 
+                        </Grid>-->
                     </Grid>
+
                 </TabItem>
 
                 <TabItem Header="Dati DDT" Style="{StaticResource SubTabItemStyle}">
