--- a/FaPA/GUI/Design/Templates/DatiDocumento.xaml
+++ b/FaPA/GUI/Design/Templates/DatiDocumento.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:utils="clr-namespace:FaPA.GUI.Utils"
              xmlns:enums="clr-namespace:FaPA.Core.FaPa"
-             xmlns:myRecordNavigator="clr-namespace:FaPA.GUI.Controls.MyRecordNavigator">
+             xmlns:myRecordNavigator="clr-namespace:FaPA.GUI.Controls.MyRecordNavigator"
+             xmlns:t="clr-namespace:FaPA.GUI.Design.Templates">
     
     <Grid Margin="2,2,2,2">
         <Grid.RowDefinitions>
@@ -82,14 +83,44 @@
                             <DatePicker SelectedDate="{Binding CurrentPoco.Data}"/>
                         </StackPanel>
                         
-                        <StackPanel Grid.Row="1" Grid.Column="0" Margin="2,0,2,0">
+                        <StackPanel Grid.Row="0" Grid.Column="3" Margin="2,0,2,0">
                             <TextBlock Text="Divisa" />
                             <TextBox   Text="{Binding CurrentPoco.Divisa, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}" HorizontalAlignment="Stretch" />
                         </StackPanel>
                         
-                        <StackPanel Grid.Row="1" Grid.Column="1" Margin="2,0,2,0">
+                        <StackPanel Grid.Row="1" Grid.Column="0" Margin="2,0,2,0">
                             <TextBlock Text="Totale documento" />
                             <TextBox   Text="{Binding CurrentPoco.ImportoTotaleDocumento, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}" HorizontalAlignment="Stretch" />
+                        </StackPanel>
+
+                        <StackPanel Grid.Row="1" Grid.Column="1" Margin="2,0,2,0">
+                            <TextBlock Text="Arrotondamento" />
+                            <TextBox   Text="{Binding CurrentPoco.Arrotondamento, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}" HorizontalAlignment="Stretch" />
+                        </StackPanel>
+
+                        <StackPanel Grid.Row="1" Grid.Column="3"  Margin="2,0,2,0">
+                            <TextBlock Text="Art73" />
+                            <!--TextSearch.TextPath="Description" DisplayMemberPath="Description"-->
+                            <ComboBox Tag="EnterAsTab"
+						                HorizontalAlignment="Stretch"
+                                        IsEditable="true"
+                                        IsTextSearchEnabled="True"
+                                        TextSearch.TextPath="Value"
+                                        SelectedValuePath="Value"
+						                ItemsSource="{Binding Source={utils:Enumeration {x:Type enums:Art73Type}}}"
+                                        SelectedValue="{Binding CurrentPoco.Art73,  Mode=TwoWay, 
+                                                                UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                                        DisplayMemberPath="Value" />
+                        </StackPanel>
+
+                        <StackPanel Grid.Row="1" Grid.Column="3" Margin="2,0,2,0">
+                            <TextBlock Text="Art73" />
+                            <TextBox   Text="{Binding CurrentPoco.Art73, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}" HorizontalAlignment="Stretch" />
+                        </StackPanel>
+
+                        <StackPanel Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4" Margin="2,0,2,0">
+                            <TextBlock Text="Causale" />
+                            <TextBox   Text="{Binding CurrentPoco.Art73, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}" HorizontalAlignment="Stretch" />
                         </StackPanel>
 
                     </Grid>                   
@@ -132,45 +163,72 @@
                 </TabItem>
 
                 <TabItem Header="Dati ritenuta" Style="{StaticResource SubTabItemStyle}">
-                    <Grid Margin="2,2,2,2">
-                        <Grid.Effect>
-                            <DropShadowEffect Color="LightSteelBlue" Direction="270"/>
-                        </Grid.Effect>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="45" />
-                            <RowDefinition Height="45" />
-                        </Grid.RowDefinitions>
 
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
+                    <Grid DataContext="{Binding DatiRitenutaViewModel}">
+                        <t:InstanceNullManager x:Name="NullManager"
+                                               BindedInstance="{Binding CurrentPoco}"
+                                               EmptyMessage="Nessuna ritenuta è stata aggiunta"
+                                               ActionCommandMessage="Aggiungi una ritenuta"
+                                               OnNullCommand="{Binding AddItemCommand}" />
 
-                        <StackPanel Grid.Row="0" Grid.Column="1" Margin="2,0,2,0">
-                            <TextBlock Text="Tipo" />
-                            <TextBox   Text="{Binding CurrentPoco.DatiRitenuta.TipoRitenuta, UpdateSourceTrigger=LostFocus, 
-                                                                        ValidatesOnDataErrors=True, 
-                                                                        NotifyOnTargetUpdated=True,
-                                                                        NotifyOnValidationError=True}" 
-                               HorizontalAlignment="Stretch"/>
-                        </StackPanel>
+                        <Grid Margin="2,2,2,2" 
+                              Visibility="{Binding CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}">
+                              
+                            <Grid.Effect>
+                                <DropShadowEffect Color="LightSteelBlue" Direction="270"/>
+                            </Grid.Effect>
+                            
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="45" />
+                                <RowDefinition Height="45" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
 
-                        <StackPanel Grid.Row="0" Grid.Column="0" Margin="2,0,2,0">
-                            <TextBlock Text="Importo" />
-                            <TextBox   Text="{Binding CurrentPoco.DatiRitenuta.ImportoRitenuta, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}" HorizontalAlignment="Stretch" />
-                        </StackPanel>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
 
-                        <StackPanel Grid.Row="1" Grid.Column="0" Margin="2,0,2,0">
-                            <TextBlock Text="Aliquota" />
-                            <TextBox   Text="{Binding CurrentPoco.DatiRitenuta.AliquotaRitenuta, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
-                        </StackPanel>
+                            <StackPanel Grid.Row="0" Grid.Column="1" Margin="2,0,2,0">
+                                <TextBlock Text="Tipo" />
+                                <TextBox   Text="{Binding CurrentPoco.TipoRitenuta, UpdateSourceTrigger=LostFocus, 
+                                                          ValidatesOnDataErrors=True, NotifyOnTargetUpdated=True,
+                                                          NotifyOnValidationError=True}" 
+                                            HorizontalAlignment="Stretch"/>
+                            </StackPanel>
 
-                        <StackPanel Grid.Row="1" Grid.Column="1" Margin="2,0,2,0">
-                            <TextBlock Text="Causale pagamento" />
-                            <TextBox   Text="{Binding CurrentPoco.DatiRitenuta.CausalePagamento, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
-                        </StackPanel>
+                            <StackPanel Grid.Row="0" Grid.Column="0" Margin="2,0,2,0">
+                                <TextBlock Text="Importo" />
+                                <TextBox   Text="{Binding CurrentPoco.ImportoRitenuta, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}" HorizontalAlignment="Stretch" />
+                            </StackPanel>
 
+                            <StackPanel Grid.Row="1" Grid.Column="0" Margin="2,0,2,0">
+                                <TextBlock Text="Aliquota" />
+                                <TextBox   Text="{Binding CurrentPoco.AliquotaRitenuta, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                            </StackPanel>
+
+                            <StackPanel Grid.Row="1" Grid.Column="1" Margin="2,0,2,0">
+                                <TextBlock Text="Causale pagamento" />
+                                <TextBox   Text="{Binding CurrentPoco.CausalePagamento, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                            </StackPanel>
+
+                            <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
+                                        Height="Auto"  Margin="1,10,1,1" Background="Gainsboro"
+                                        Visibility="{Binding CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}">
+
+                                <Button Command="{Binding Path=DeleteEntityCommand}"
+                                        Width="Auto" Height="25" HorizontalAlignment="Left" Margin="2,0,0,0">
+
+                                    <Image Source="/GUI/Design/Styles/Images/delete(1).png" Width="25"/>
+
+                                </Button>
+
+                            </StackPanel>
+
+                        </Grid>
+                        
                     </Grid>
+
                 </TabItem>
 
                 <TabItem Header="Dati cassa prev." Style="{StaticResource SubTabItemStyle}">
@@ -239,8 +297,9 @@
 
                         </DockPanel>                        
 
-                        <Grid  Grid.Row="1" Grid.Column="0" DataContext="{Binding ScontoMaggiorazioneGeneraleView}"
-                                Visibility="{Binding IsEmpty, Mode=OneWay, Converter={StaticResource BoolToOppositeVisibilityConverter}}">
+                        <Grid  Grid.Row="1" 
+                               Grid.Column="0" DataContext="{Binding ScontoMaggiorazioneGeneraleView}"
+                               Visibility="{Binding IsEmpty, Mode=OneWay, Converter={StaticResource BoolToOppositeVisibilityConverter}}">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="14"/>
                                 <RowDefinition Height="Auto"/>
