--- a/FaPA/GUI/Design/Templates/Fattura.xaml
+++ b/FaPA/GUI/Design/Templates/Fattura.xaml
@@ -137,7 +137,7 @@
         
             <StackPanel Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="6"  Margin="2,0,2,0">
                 <TextBlock Text="Note" />
-                <TextBox   Text="{Binding CurrentEntity.Note, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged, NotifyOnSourceUpdated=True, NotifyOnValidationError=True}" 
+                <TextBox   Text="{Binding CurrentEntity.NoteDB, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged, NotifyOnSourceUpdated=True, NotifyOnValidationError=True}" 
                            HorizontalAlignment="Stretch" MaxLength="1000" TextWrapping="Wrap"/>
             </StackPanel>
                        
@@ -170,7 +170,7 @@
 
                     </Button>
 
-                        <Button Name="Ritenuta" Command="{Binding AddRitenutaCommand}" VerticalAlignment="Stretch"
+                        <!--<Button Name="Ritenuta" Command="{Binding AddRitenutaCommand}" VerticalAlignment="Stretch"
                                 ToolTip="Aggiungi una scheda ritenuta"  >
 
                             <Image Source="/GUI/Design/Styles/Images/Files-New-File-icon.png" />
@@ -192,7 +192,7 @@
                                 ToolTip="Aggiungi una scheda convenzione"  >
 
                             <Image Source="/GUI/Design/Styles/Images/Files-New-File-icon.png" />
-                        </Button>
+                        </Button>-->
                     
                 </ToolBar>
             </Border>
