--- a/FaPA/GUI/Design/Templates/DatiGenerali.xaml
+++ b/FaPA/GUI/Design/Templates/DatiGenerali.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:t="clr-namespace:FaPA.GUI.Design.Templates">
     
-    <Grid Margin="2,2,2,2">
+    <Grid Margin="2,2,2,2" MaxWidth="950">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"  />
             <RowDefinition Height="Auto" />
@@ -31,9 +31,9 @@
                             </Grid.Effect>
                             
                             <Grid.RowDefinitions>
-                            <RowDefinition Height="45" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
+                                <RowDefinition Height="45" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
 
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
@@ -346,7 +346,7 @@
            
                 </TabItem>
 
-                <!--<TabItem Header="Dati SAL" Style="{StaticResource SubTabItemStyle}">
+                <TabItem Header="Dati SAL" Style="{StaticResource SubTabItemStyle}">
 
                     <Grid DataContext="{Binding DatiSalViewModel}" >
                         
@@ -356,6 +356,7 @@
                                                ActionCommandMessage="Aggiungi una scheda dati SAL"
                                                OnNullCommand="{Binding AddItemCommand}" 
                                                ActionCommandParam="DatiSAL"/>
+                        
                         <Grid HorizontalAlignment="Stretch">
 
                             <Grid.RowDefinitions>
@@ -407,9 +408,9 @@
 
                                         <DataGridTextColumn Header="Riferimento fase" Width="*" 
                                                             Binding="{Binding RiferimentoFase, ValidatesOnDataErrors =True,
-                                                                                        NotifyOnSourceUpdated=True,
-                                                                                        NotifyOnValidationError=True,
-                                                                                        UpdateSourceTrigger =LostFocus}"
+                                                                              NotifyOnSourceUpdated=True,
+                                                                              NotifyOnValidationError=True,
+                                                                              UpdateSourceTrigger =LostFocus}"
                                                             ElementStyle="{StaticResource errorStyle}">
                                             
                                         </DataGridTextColumn>
@@ -427,35 +428,23 @@
                                     </DataGrid.GroupStyle>
 
                                 </DataGrid>
-
                             </DockPanel>
 
-                            <DockPanel Width="Auto" Grid.Row="2" Height="25" 
-                                       Visibility="{Binding IsEmpty, Converter={StaticResource BoolToOppositeVisibilityConverter},Mode=OneWay}"
-                                       Margin="0 05 0 0" Background="{StaticResource Brush_ToolBar}">
-
-                                        <m:MyRecordNavigator ItemsSource="{Binding Path=UserCollectionView}"
-                                                             GridSource="{Binding ElementName=DatiSALGridControl}"
-                                                             Height="25"/>
-
-                                <Button Command="{Binding AddItemCommand}" ToolTip="Aggiunge nuovo record" >
-                                    <Image Source="/GUI/Design/Styles/Images/Add_24.png" Width="Auto"/>
-                                </Button>
-
-                                <Button Command="{Binding DeleteEntityCommand}"   ToolTip="Elimina record" 
-                                        Width="25" HorizontalAlignment="Left">
-                                    <Image Source="/GUI/Design/Styles/Images/delete(1).png" Width="25"/>
-                                </Button>
-
-                            </DockPanel>
+                            <t:SaveCancelRemoveButtons Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="1" HorizontalAlignment="Left"
+                                                       Visibility="{Binding CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}"
+                                                       DeleteEntityCommand="{Binding DeleteEntityCommand}"
+                                                       PerformCancelCommand="{Binding PerformCancel}"
+                                                       AddItemCommand="{Binding AddItemCommand}"
+                                                       SaveCommand="{Binding SaveEntity}"
+                                                       UserCollectionView="{Binding UserCollectionView}"/>
 
                         </Grid>
 
                     </Grid>
 
-                </TabItem>-->
+                </TabItem>
 
-                <!--<TabItem Header="Dati DDT" Style="{StaticResource SubTabItemStyle}">
+                <TabItem Header="Dati DDT" Style="{StaticResource SubTabItemStyle}">
                     <Grid DataContext="{Binding DatiDdtViewModel}" >
 
                         <t:InstanceNullManager Grid.Row="0" Grid.ColumnSpan="2"
@@ -562,47 +551,35 @@
 
                             </DockPanel>
 
-                            <DockPanel Width="Auto" Grid.Row="2" Height="25" 
-                                       Visibility="{Binding IsEmpty, Converter={StaticResource BoolToOppositeVisibilityConverter},Mode=OneWay}"
-                                       Margin="0 05 0 0" Background="{StaticResource Brush_ToolBar}">
-
-                                <m:MyRecordNavigator ItemsSource="{Binding Path=UserCollectionView}"
-                                                     GridSource="{Binding ElementName=DatiDdtGridControl}"
-                                                     Height="25"/>
-
-                                <Button Command="{Binding AddItemCommand}" ToolTip="Aggiunge nuovo record" >
-                                    <Image Source="/GUI/Design/Styles/Images/Add_24.png" Width="Auto"/>
-                                </Button>
-
-                                <Button Command="{Binding DeleteEntityCommand}" ToolTip="Elimina record" 
-                                        Width="25" HorizontalAlignment="Left">
-                                    <Image Source="/GUI/Design/Styles/Images/delete(1).png" Width="25"/>
-                                </Button>
-
-                            </DockPanel>
-
+                            <t:SaveCancelRemoveButtons Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="1" HorizontalAlignment="Left"
+                                                       Visibility="{Binding CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}"
+                                                       DeleteEntityCommand="{Binding DeleteEntityCommand}"
+                                                       PerformCancelCommand="{Binding PerformCancel}"
+                                                       AddItemCommand="{Binding AddItemCommand}"
+                                                       SaveCommand="{Binding SaveEntity}"
+                                                       UserCollectionView="{Binding UserCollectionView}"/>
                         </Grid>
 
                     </Grid>
-                </TabItem>-->
+                </TabItem>
 
-                <TabItem Header="Dati fatture collegate" Style="{StaticResource SubTabItemStyle}">
+                <TabItem Header="Fatture collegate" Style="{StaticResource SubTabItemStyle}">
                     <ContentControl Content="{Binding DatiFattureCollegate, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}" />
                 </TabItem>
 
-                <TabItem Header="Dati contratto" Style="{StaticResource SubTabItemStyle}">
+                <TabItem Header="Contratto" Style="{StaticResource SubTabItemStyle}">
                     <ContentControl Content="{Binding DatiContratto, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}"/>
                 </TabItem>
 
-                <TabItem Header="Dati ordini" Style="{StaticResource SubTabItemStyle}">
+                <TabItem Header="Ordini" Style="{StaticResource SubTabItemStyle}">
                     <ContentControl Content="{Binding DatiOrdini, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}"/>
                 </TabItem>
 
-                <TabItem Header="Dati convenzione" Style="{StaticResource SubTabItemStyle}">
+                <TabItem Header="Convenzione" Style="{StaticResource SubTabItemStyle}">
                     <ContentControl Content="{Binding DatiConvenzione, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}"/>
                 </TabItem>
 
-                <TabItem Header="Dati ricezione" Style="{StaticResource SubTabItemStyle}">
+                <TabItem Header="Ricezione" Style="{StaticResource SubTabItemStyle}">
                     <ContentControl Content="{Binding DatiRicezione, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}"/>
                 </TabItem>
 
